# nas-tools-enhanced

./: .gitignore  README.md  config.py  package_list.txt  pyproject.toml  requirements.txt  start.sh  version.py
.github/workflows/: build-dev.yml  build-main.yml  build.yml
.run/: Docker Dev.run.xml  nas-tools-enhanced.run.xml  pytest for xunlei_test.MyTestCase.run.xml
app/: brushtask.py  filetransfer.py
app/conf/: moduleconf.py
app/downloader/client/: xunlei.py
app/utils/: element_util.py  system_utils.py  types.py
config/: config.yaml
docker/: Dockerfile  compose.yml  dev.dockerfile  entrypoint.sh  main.dockerfile  master.dockerfile
tests/: xunlei_test.py
web/: action.py
web/backend/: web_utils.py
web/static/components/layout/navbar/: index.js
