[tool.poetry]
name = "nas-tools-enhanced"
version = "2.10.0"
description = "The modification of this fork is a personal behavior and does not represent the official position of NAStools."
authors = ["Madray Haven <sgpublic2002@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9 <3.11"

anitopy = "^2.1.1"
feapder = "^1.8.5"
PlexAPI = "^4.13.2"
qbittorrent-api = "^2023.2.43"
slack-bolt = "^1.16.2"
transmission-rpc = "^4.1.2"

alembic = "^1.8.1"
APScheduler = "^3.9.1"
backports-shutil-get-terminal-size = "^1.0.0"
cacheout = "^0.14.1"
cn2an = "^0.5.17"
dateparser = "^1.1.4"
fast-bencode = "^1.1.3"
Flask-Compress = "^1.13"
Flask-Login = "^0.6.2"
flask-restx = "^0.5.1"
humanize = "^4.4.0"
jsonpath = "^0.82"
parse = "^1.19.0"
pikpakapi = "^0.1.1"
pycryptodome = "^3.15.0"
PyJWT = "^2.5.0"
pypushdeer = "^0.0.3"
pyquery = "^1.4.3"
PySocks = "^1.7.1"
PyVirtualDisplay = "^3.0"
undetected-chromedriver = "^3.1.7"
watchdog = "^2.1.9"
ruamel-yaml = "^0.17.21"
ruamel-yaml-clib = "^0.2.7"
zhconv = "^1.4.3"
werkzeug = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
